--- a/app/templates/clientes/lista_clientes.html
+++ b/app/templates/clientes/lista_clientes.html
@@ -5,6 +5,17 @@
 
 {% block content %}
     <section class="content">
+    <div class="modal fade" tabindex="-1" role="dialog" id="modal-default">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content"></div>
+        </div>
+    </div>
+
+<div class="modal fade" tabindex="-1" role="dialog" id="modal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content"></div>
+        </div>
+    </div>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
@@ -73,5 +84,58 @@
         <!-- /.container-fluid -->
     </section>
 {% endblock content %}
+
+{% block scripts %}
+    <script>
+        $(function () {
+            $("#example1").DataTable({
+                "responsive": true, "lengthChange": false, "autoWidth": false,
+                "buttons": ["copy", "csv", "excel", "pdf", "print"],
+                language: {
+                    url: 'https://cdn.datatables.net/plug-ins/1.13.2/i18n/pt-BR.json'
+                },
+                scrollY: '50vh',
+            }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+            $('#example2').DataTable({
+                "paging": true,
+                "lengthChange": false,
+                "searching": false,
+                "ordering": true,
+                "info": true,
+                "autoWidth": false,
+                "responsive": true,
+            });
+        });
+    </script>
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("#novo-cliente").modalForm({
+                formURL: "{% url 'clientes:novo_cliente' %}",
+                modalID: "#modal-default"
+            });
+
+            function updateClienteModalForm() {
+                $(".update-cliente").each(function () {
+                    $(this).modalForm({
+                        formURL: $(this).data("form-url"),
+                        asyncUpdate: false,
+                        modalID: "#modal-default",
+                    });
+                });
+            }
+
+            updateClienteModalForm();
+
+        function deleteClienteForm() {
+        $(".delete-cliente").each(function () {
+            $(this).modalForm({formURL: $(this).data("form-url"), isDeleteForm: true});
+
+        });
+      }
+      deleteClienteForm();
+        });
+    </script>
+{% endblock scripts %}
 
 
