--- a/app/templates/clientes/novo_cliente.html
+++ b/app/templates/clientes/novo_cliente.html
@@ -13,8 +13,8 @@
             <div class="col-sm-6">
                 <!-- text input -->
                 <div class="form-group">
-                    <label>{{ form.tipo.label }}</label>
-                    {% render_field form.tipo class="form-control"  %}
+                    <label>{{ form.tipo_documento.label }}</label>
+                    {% render_field form.tipo_documento class="form-control"  %}
                 </div>
             </div>
             <div class="col-sm-6">
@@ -54,15 +54,15 @@
 <script>
     $(document).ready(function(){
         var masks = ['000.000.000-00', '00.000.000/0000-00'];
-        var docInitial = $("#id_tipo").val()
+        var docInitial = $("#id_tipo_documento").val()
         $('#id_telefone').mask('(00) 00000-0000');
         if (docInitial === "CPF"){
             $('#id_documento').mask(masks[0], {reverse: true});
         } else {
             $('#id_documento').mask(masks[1], {reverse: true});
         }
-        $("#id_tipo").change(function(){
-            var doc = $("#id_tipo").val()
+        $("#id_tipo_documento").change(function(){
+            var doc = $("#id_tipo_documento").val()
             if (doc === "CPF"){
                 $('#id_documento').mask(masks[0]);
             }else if (doc === "CNPJ") {
