--- a/app/templates/clientes/lista_clientes.html
+++ b/app/templates/clientes/lista_clientes.html
@@ -2,6 +2,11 @@
 {% load static %}
 
 
+{% block titulo_pagina %}Clientes{% endblock titulo_pagina %}
+
+{% block nome_pagina %}Clientes{% endblock nome_pagina %}
+
+{% block link_pagina %}Clientes{% endblock link_pagina %}
 
 {% block content %}
     <section class="content">
