--- a/app/templates/base/sidebar.html
+++ b/app/templates/base/sidebar.html
@@ -35,8 +35,8 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-          <li class="nav-item menu-open">
-            <a href="#" class="nav-link active">
+          <li class="nav-item {% if active_cadastro %}menu-open {% endif %}">
+            <a href="#" class="nav-link {% if active_cadastro %}active{% endif %}">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
                 Cadastros
@@ -45,7 +45,7 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="#" class="nav-link active">
+                <a href="{% url 'clientes:lista_cliente' %}" class="nav-link {% if active_clientes%} active{% endif %}">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Clientes</p>
                 </a>
