--- a/app/templates/ordem_servicos/ticket_list.html
+++ b/app/templates/ordem_servicos/ticket_list.html
@@ -1,5 +1,170 @@
 {% extends "base/base.html" %}
-
+{% load static %}
+{% block titulo_pagina %}Tickets{% endblock %}
+{% block nome_pagina %}Tickets{% endblock %}
 
 {% block content %}
+    <section class="content">
+        <div class="modal fade" tabindex="-1" role="dialog" id="modal-default">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content"></div>
+            </div>
+        </div>
+
+        <div class="modal fade" tabindex="-1" role="dialog" id="modal">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content"></div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="card">
+                        <div class="card-header border-transparent">
+                            <h3 class="card-title">Lista de Tickets</h3>
+
+                            <div class="card-tools">
+                                <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                                    <i class="fas fa-minus"></i>
+                                </button>
+                                <button type="button" class="btn btn-tool" data-card-widget="remove">
+                                    <i class="fas fa-times"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <!-- /.card-header -->
+                        <div class="card-body p-0">
+                            <div class="table-responsive">
+                                <table class="table m-0">
+                                    <thead>
+                                    <tr>
+                                        <th>Cliente</th>
+                                        <th>Titulo</th>
+                                        <th>Status</th>
+                                        <th>Aberto em</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+
+                                    {% for item in object_list %}
+                                        <tr>
+                                            <td><a href="pages/examples/invoice.html">OR9842</a></td>
+                                            <td>Call of Duty IV</td>
+                                            <td><span class="badge badge-success">Shipped</span></td>
+                                            <td>
+                                                <div class="sparkbar" data-color="#00a65a" data-height="20">90,80,90,-70,61,-83,63</div>
+                                            </td>
+                                        </tr>
+                                    {% empty %}
+                                        <tr>
+                                            <td>
+                                                Sem Registros
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!-- /.table-responsive -->
+                        </div>
+                        <!-- /.card-body -->
+                        <div class="card-footer clearfix">
+
+                            <button id="novo-ticket" type="button" class="btn btn-sm btn-info float-left" data-toggle="modal" data-target="#modal-default"><i class="fa fa-bell"></i>Abrir Tickt</button>
+
+                        </div>
+                        <!-- /.card-footer -->
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h3 class="card-title">Browser Usage</h3>
+
+                            <div class="card-tools">
+                                <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                                    <i class="fas fa-minus"></i>
+                                </button>
+                                <button type="button" class="btn btn-tool" data-card-widget="remove">
+                                    <i class="fas fa-times"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <!-- /.card-header -->
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <div class="chart-responsive">
+                                        <canvas id="pieChart" height="150"></canvas>
+                                    </div>
+                                    <!-- ./chart-responsive -->
+                                </div>
+                                <!-- /.col -->
+                                <div class="col-md-4">
+                                    <ul class="chart-legend clearfix">
+                                        <li><i class="far fa-circle text-danger"></i> Chrome</li>
+                                        <li><i class="far fa-circle text-success"></i> IE</li>
+                                        <li><i class="far fa-circle text-warning"></i> FireFox</li>
+                                        <li><i class="far fa-circle text-info"></i> Safari</li>
+                                        <li><i class="far fa-circle text-primary"></i> Opera</li>
+                                        <li><i class="far fa-circle text-secondary"></i> Navigator</li>
+                                    </ul>
+                                </div>
+                                <!-- /.col -->
+                            </div>
+                            <!-- /.row -->
+                        </div>
+                        <!-- /.card-body -->
+                        <div class="card-footer p-0">
+                            <ul class="nav nav-pills flex-column">
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">
+                                        United States of America
+                                        <span class="float-right text-danger">
+                        <i class="fas fa-arrow-down text-sm"></i>
+                        12%</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">
+                                        India
+                                        <span class="float-right text-success">
+                        <i class="fas fa-arrow-up text-sm"></i> 4%
+                      </span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">
+                                        China
+                                        <span class="float-right text-warning">
+                        <i class="fas fa-arrow-left text-sm"></i> 0%
+                      </span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- /.footer -->
+                    </div>
+                    <!-- /.card -->
+
+                    <!-- PRODUCT LIST -->
+
+                    <!-- /.card -->
+                </div>
+                <!-- /.col -->
+            </div>
+            <!-- /.row -->
+        </div><!--/. container-fluid -->
+    </section>
 {% endblock content %}
+
+{% block scripts %}
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("#novo-ticket").modalForm({
+                formURL: "{% url 'ordens:ticket_novo' %}",
+                modalID: "#modal-default"
+            });
+        });
+    </script>
+{% endblock scripts %}
