--- a/app/templates/ordem_servicos/novo_ticket.html
+++ b/app/templates/ordem_servicos/novo_ticket.html
@@ -1,3 +1,34 @@
 {% extends 'base/base.html' %}
 {% load widget_tweaks %}
 
+{% block content %}
+    <section class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <!-- left column -->
+
+                <!--/.col (left) -->
+                <!-- right column -->
+                <div class="col-md-6">
+
+                    <div class="card card-warning">
+                        <div class="card-header">
+                            <h3 class="card-title">General Elements</h3>
+                        </div>
+                        <!-- /.card-header -->
+                        <div class="card-body">
+                            <form>
+
+
+                            </form>
+                        </div>
+                        <!-- /.card-body -->
+                    </div>
+
+                </div>
+                <!--/.col (right) -->
+            </div>
+            <!-- /.row -->
+        </div><!-- /.container-fluid -->
+    </section>
+{% endblock content %}
