--- a/app/templates/ordem_servicos/ticket_list.html
+++ b/app/templates/ordem_servicos/ticket_list.html
@@ -4,167 +4,230 @@
 {% block nome_pagina %}Tickets{% endblock %}
 
 {% block content %}
-    <section class="content">
-        <div class="modal fade" tabindex="-1" role="dialog" id="modal-default">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content"></div>
-            </div>
-        </div>
 
-        <div class="modal fade" tabindex="-1" role="dialog" id="modal">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content"></div>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="card">
-                        <div class="card-header border-transparent">
-                            <h3 class="card-title">Lista de Tickets</h3>
-
-                            <div class="card-tools">
-                                <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                                    <i class="fas fa-minus"></i>
-                                </button>
-                                <button type="button" class="btn btn-tool" data-card-widget="remove">
-                                    <i class="fas fa-times"></i>
-                                </button>
-                            </div>
-                        </div>
-                        <!-- /.card-header -->
-                        <div class="card-body p-0">
-                            <div class="table-responsive">
-                                <table class="table m-0">
-                                    <thead>
-                                    <tr>
-                                        <th>Cliente</th>
-                                        <th>Titulo</th>
-                                        <th>Status</th>
-                                        <th>Aberto em</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-
-                                    {% for item in object_list %}
-                                        <tr>
-                                            <td><a href="pages/examples/invoice.html">OR9842</a></td>
-                                            <td>Call of Duty IV</td>
-                                            <td><span class="badge badge-success">Shipped</span></td>
-                                            <td>
-                                                <div class="sparkbar" data-color="#00a65a" data-height="20">90,80,90,-70,61,-83,63</div>
-                                            </td>
-                                        </tr>
-                                    {% empty %}
-                                        <tr>
-                                            <td>
-                                                Sem Registros
-                                            </td>
-                                        </tr>
-                                    {% endfor %}
-                                    </tbody>
-                                </table>
-                            </div>
-                            <!-- /.table-responsive -->
-                        </div>
-                        <!-- /.card-body -->
-                        <div class="card-footer clearfix">
-
-                            <button id="novo-ticket" type="button" class="btn btn-sm btn-info float-left" data-toggle="modal" data-target="#modal-default"><i class="fa fa-bell"></i>Abrir Tickt</button>
-
-                        </div>
-                        <!-- /.card-footer -->
-                    </div>
+    <div class="content">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="card">
+              <div class="card-header border-0">
+                <div class="d-flex justify-content-between">
+                  <h3 class="card-title">Online Store Visitors</h3>
+                  <a href="javascript:void(0);">View Report</a>
                 </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <div class="card-header">
-                            <h3 class="card-title">Browser Usage</h3>
-
-                            <div class="card-tools">
-                                <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                                    <i class="fas fa-minus"></i>
-                                </button>
-                                <button type="button" class="btn btn-tool" data-card-widget="remove">
-                                    <i class="fas fa-times"></i>
-                                </button>
-                            </div>
-                        </div>
-                        <!-- /.card-header -->
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-8">
-                                    <div class="chart-responsive">
-                                        <canvas id="pieChart" height="150"></canvas>
-                                    </div>
-                                    <!-- ./chart-responsive -->
-                                </div>
-                                <!-- /.col -->
-                                <div class="col-md-4">
-                                    <ul class="chart-legend clearfix">
-                                        <li><i class="far fa-circle text-danger"></i> Chrome</li>
-                                        <li><i class="far fa-circle text-success"></i> IE</li>
-                                        <li><i class="far fa-circle text-warning"></i> FireFox</li>
-                                        <li><i class="far fa-circle text-info"></i> Safari</li>
-                                        <li><i class="far fa-circle text-primary"></i> Opera</li>
-                                        <li><i class="far fa-circle text-secondary"></i> Navigator</li>
-                                    </ul>
-                                </div>
-                                <!-- /.col -->
-                            </div>
-                            <!-- /.row -->
-                        </div>
-                        <!-- /.card-body -->
-                        <div class="card-footer p-0">
-                            <ul class="nav nav-pills flex-column">
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        United States of America
-                                        <span class="float-right text-danger">
-                        <i class="fas fa-arrow-down text-sm"></i>
-                        12%</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        India
-                                        <span class="float-right text-success">
-                        <i class="fas fa-arrow-up text-sm"></i> 4%
-                      </span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        China
-                                        <span class="float-right text-warning">
-                        <i class="fas fa-arrow-left text-sm"></i> 0%
-                      </span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- /.footer -->
-                    </div>
-                    <!-- /.card -->
-
-                    <!-- PRODUCT LIST -->
-
-                    <!-- /.card -->
+              </div>
+              <div class="card-body">
+                <div class="d-flex">
+                  <p class="d-flex flex-column">
+                    <span class="text-bold text-lg">820</span>
+                    <span>Visitors Over Time</span>
+                  </p>
+                  <p class="ml-auto d-flex flex-column text-right">
+                    <span class="text-success">
+                      <i class="fas fa-arrow-up"></i> 12.5%
+                    </span>
+                    <span class="text-muted">Since last week</span>
+                  </p>
                 </div>
-                <!-- /.col -->
+                <!-- /.d-flex -->
+
+                <div class="position-relative mb-4">
+                  <canvas id="visitors-chart" height="200"></canvas>
+                </div>
+
+                <div class="d-flex flex-row justify-content-end">
+                  <span class="mr-2">
+                    <i class="fas fa-square text-primary"></i> This Week
+                  </span>
+
+                  <span>
+                    <i class="fas fa-square text-gray"></i> Last Week
+                  </span>
+                </div>
+              </div>
             </div>
-            <!-- /.row -->
-        </div><!--/. container-fluid -->
-    </section>
+            <!-- /.card -->
+             <div class="card">
+              <div class="card-header">
+                <h3 class="card-title">DataTable with default features</h3>
+              </div>
+              <!-- /.card-header -->
+              <div class="card-body">
+                <table id="tickets" class="table table-bordered table-striped">
+                  <thead>
+                  <tr>
+                    <th>Cliente</th>
+                    <th>Solicitante</th>
+                    <th>Status</th>
+                    <th>Data</th>
+                    <th>Ver</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+
+                  {% for ticket in object_list %}
+                  <tr>
+                    <td>
+                      <img src="dist/img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">
+                      Some Product
+                    </td>
+                    <td>$13 USD</td>
+                    <td>
+                      <small class="text-success mr-1">
+                        <i class="fas fa-arrow-up"></i>
+                        12%
+                      </small>
+                      12,000 Sold
+                    </td>
+                    <td>
+                      <a href="#" class="text-muted">
+                        <i class="fas fa-search"></i>
+                      </a>
+                    </td>
+                  </tr>
+                  {% endfor %}
+                  </tbody>
+                  <tfoot>
+                  <tr>
+                     <th>Cliente</th>
+                    <th>Solicitante</th>
+                    <th>Status</th>
+                    <th>Data</th>
+                    <th>Ver</th>
+
+                  </tr>
+                  </tfoot>
+                </table>
+              </div>
+              <!-- /.card-body -->
+            </div>
+
+            <!-- /.card -->
+          </div>
+          <!-- /.col-md-6 -->
+          <div class="col-lg-6">
+
+     <div class="card">
+              <div class="card-header">
+                <h3 class="card-title">DataTable with default features</h3>
+              </div>
+              <!-- /.card-header -->
+              <div class="card-body">
+                <table id="clientes" class="table table-bordered table-striped">
+                  <thead>
+                  <tr>
+                    <th>Cliente</th>
+                    <th>Documento</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+
+                  {% for cliente in clientes %}
+                  <tr>
+                       <td><a href="{% url 'ordens:ticket_create' cliente.id %}">{{ cliente.nome }}</a></td>
+                    <td>{{ cliente.documento|default:"Sem Documento Cadastrado" }}</td>
+                  </tr>
+                  {% endfor %}
+                  </tbody>
+                  <tfoot>
+                  <tr>
+                     <th>Cliente</th>
+                    <th>Documento</th>
+                  </tr>
+                  </tfoot>
+                </table>
+              </div>
+              <!-- /.card-body -->
+            </div>
+
+            <div class="card">
+              <div class="card-header border-0">
+                <h3 class="card-title">Online Store Overview</h3>
+                <div class="card-tools">
+                  <a href="#" class="btn btn-sm btn-tool">
+                    <i class="fas fa-download"></i>
+                  </a>
+                  <a href="#" class="btn btn-sm btn-tool">
+                    <i class="fas fa-bars"></i>
+                  </a>
+                </div>
+              </div>
+              <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center border-bottom mb-3">
+                  <p class="text-success text-xl">
+                    <i class="ion ion-ios-refresh-empty"></i>
+                  </p>
+                  <p class="d-flex flex-column text-right">
+                    <span class="font-weight-bold">
+                      <i class="ion ion-android-arrow-up text-success"></i> 12%
+                    </span>
+                    <span class="text-muted">CONVERSION RATE</span>
+                  </p>
+                </div>
+                <!-- /.d-flex -->
+                <div class="d-flex justify-content-between align-items-center border-bottom mb-3">
+                  <p class="text-warning text-xl">
+                    <i class="ion ion-ios-cart-outline"></i>
+                  </p>
+                  <p class="d-flex flex-column text-right">
+                    <span class="font-weight-bold">
+                      <i class="ion ion-android-arrow-up text-warning"></i> 0.8%
+                    </span>
+                    <span class="text-muted">SALES RATE</span>
+                  </p>
+                </div>
+                <!-- /.d-flex -->
+                <div class="d-flex justify-content-between align-items-center mb-0">
+                  <p class="text-danger text-xl">
+                    <i class="ion ion-ios-people-outline"></i>
+                  </p>
+                  <p class="d-flex flex-column text-right">
+                    <span class="font-weight-bold">
+                      <i class="ion ion-android-arrow-down text-danger"></i> 1%
+                    </span>
+                    <span class="text-muted">REGISTRATION RATE</span>
+                  </p>
+                </div>
+                <!-- /.d-flex -->
+              </div>
+            </div>
+          </div>
+          <!-- /.col-md-6 -->
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container-fluid -->
+    </div>
 {% endblock content %}
 
+
+
 {% block scripts %}
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $("#novo-ticket").modalForm({
-                formURL: "{% url 'ordens:ticket_novo' %}",
-                modalID: "#modal-default"
-            });
+<script>
+        $(function () {
+            $("#clientes").DataTable({
+                "responsive": true, "lengthChange": false, "autoWidth": false,
+                language: {
+                    url: 'https://cdn.datatables.net/plug-ins/1.13.2/i18n/pt-BR.json'
+                },
+                paging: false,
+                scrollCollapse: true,
+                scrollY: '50vh'
+            })
+        });
+    </script>
+
+    <script>
+        $(function () {
+            $("#tickets").DataTable({
+                "responsive": true, "lengthChange": false, "autoWidth": false,
+                language: {
+                    url: 'https://cdn.datatables.net/plug-ins/1.13.2/i18n/pt-BR.json'
+                },
+                paging: false,
+                scrollCollapse: true,
+                scrollY: '50vh'
+            })
         });
     </script>
 {% endblock scripts %}
