--- a/app/templates/ordem_servicos/novo_ticket.html
+++ b/app/templates/ordem_servicos/novo_ticket.html
@@ -1,34 +1,30 @@
-{% extends 'base/base.html' %}
 {% load widget_tweaks %}
+<form method="post" action="">
+    {% csrf_token %}
+    <div class="modal-header">
+        <h4 class="modal-title">Novo Cliente</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
 
-{% block content %}
-    <section class="content">
-        <div class="container-fluid">
-            <div class="row">
-                <!-- left column -->
+        {% for hidden in form.hidden_fields %}
+      {{ hidden }}
+    {% endfor %}
 
-                <!--/.col (left) -->
-                <!-- right column -->
-                <div class="col-md-6">
-
-                    <div class="card card-warning">
-                        <div class="card-header">
-                            <h3 class="card-title">General Elements</h3>
-                        </div>
-                        <!-- /.card-header -->
-                        <div class="card-body">
-                            <form>
-
-
-                            </form>
-                        </div>
-                        <!-- /.card-body -->
-                    </div>
-
-                </div>
-                <!--/.col (right) -->
-            </div>
-            <!-- /.row -->
-        </div><!-- /.container-fluid -->
-    </section>
-{% endblock content %}
+    {% for field in form.visible_fields %}
+      <div class="form-group">
+        <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+        {{ field|add_class:'form-control' }}
+        {% for error in field.errors %}
+          <span class="help-block">{{ error }}</span>
+        {% endfor %}
+      </div>
+    {% endfor %}
+    </div>
+    <div class="modal-footer justify-content-between">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+        <button type="submit" class="btn btn-primary">Salvar</button>
+    </div>
+</form>
